@@ -260,7 +260,7 @@ my $inst = npg::model::instrument->new({
   my $run = npg::model::run->new({
           util                 => $util,
           id_instrument        => $inst->id_instrument(),
-          batch_id             => 2690,
+          batch_id             => 12690,
           expected_cycle_count => 0,
           actual_cycle_count   => 0,
           priority             => 0,
